--- a/octoprint_octotoot/templates/octotoot_navbar.jinja2
+++ b/octoprint_octotoot/templates/octotoot_navbar.jinja2
@@ -1,1 +1,1 @@
-<a href="https://en.wikipedia.org/wiki/Hello_world">Toot World!</a>
+<a href="#" data-bind="attr: {href: settings.settings.plugins.octotoot.url}">Hello World!</a>
