--- a/octoprint_octotoot/static/less/octotoot.less
+++ b/octoprint_octotoot/static/less/octotoot.less
@@ -1,1 +1,6 @@
 // TODO: Put your plugin's LESS here, have it generated to ../css.
+#tab_plugin_octotoot iframe {
+    width: 100%;
+    height: 600px;
+    border: 1px solid #808080;
+}
